--- a/man/mkfs.nanofs.8
+++ b/man/mkfs.nanofs.8
@@ -65,7 +65,7 @@ Print the version number
 .SH AUTHOR
 
 .B mkfs.nanofs
-has been written by Paulino Ruiz de Clavijo <paulino@dte.us.es>.
+has been written by Paulino Ruiz de Clavijo <pruiz@us.es>.
 .SH BUGS
 Please, report them to the author.
 .SH AVAILABILITY
