--- a/man/nanofs.dump.8
+++ b/man/nanofs.dump.8
@@ -31,7 +31,7 @@ COPYING for details.
 .SH "AUTHOR"
 
 .B NanoFS
-has been developed by Paulino Ruiz de Clavijo <paulino@dte.us.es>.
+has been developed by Paulino Ruiz de Clavijo <pruiz@us.es>.
 
 
 .SH BUGS
