--- a/man/nanofuse.1
+++ b/man/nanofuse.1
@@ -55,7 +55,7 @@ the Free Software Foundation, either version 3 of the License, or
 .
 .SH "AUTHORS"
 .
-Paulino Ruiz de Clavijo Vázquez <paulino@dte.us.es>
+Paulino Ruiz de Clavijo Vázquez <pruiz@us.es>
 
 Enrique Ostúa <ostua@dte.us.es>
 .br 
