--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,6 @@
 AUTHORS:
 
-Paulino Ruiz de Clavijo Vázquez <paulino@dte.us.es>
+Paulino Ruiz de Clavijo Vázquez <pruiz@us.es>
 Enrique Ostúa Aragüena <ostua@dte.us.es>
 
 
